DigicielFull/force-app/main/default/objects/amc__User_Story__c/amc__User_Story__c.object-meta.xml
<CustomObject>
    <description>The User Story Object is a child to the Requirement Object and captures the detailed scenarios that need to delivered as part of the Requirement</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>USID:{000000}</displayFormat>
        <label>User Story ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>