DigicielFull/force-app/main/default/objects/amc__User_Story__c/fields/amc__As_a__c.field-meta.xml
<CustomField>
    <fullName>amc__As_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Persona record that this User Story relates to.</inlineHelpText>
    <label>As a</label>
    <referenceTo>amc__Persona__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>