DigicielFull/force-app/main/default/objects/amc__User_Story__c/fields/amc__Effort__c.field-meta.xml
<CustomField>
    <fullName>amc__Effort__c</fullName>
    <inlineHelpText>Identifies the effort required to deliver this User Story</inlineHelpText>
    <label>Effort</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>