DigicielFull/force-app/main/default/objects/amc__User_Story__c/fields/amc__So_that_I_can__c.field-meta.xml
<CustomField>
    <fullName>amc__So_that_I_can__c</fullName>
    <inlineHelpText>A description of what the Persona is trying to achieve</inlineHelpText>
    <label>So that I can</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>