DigicielFull/force-app/main/default/objects/amc__User_Story__c/fields/amc__Summary__c.field-meta.xml
<CustomField>
    <fullName>amc__Summary__c</fullName>
    <inlineHelpText>A summary description of the User Story</inlineHelpText>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>