DigicielFull/force-app/main/default/objects/amc__User_Story__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Requirement__c</columns>
    <columns>amc__Action__c</columns>
    <columns>amc__Status__c</columns>
    <columns>amc__Effort__c</columns>
    <columns>amc__As_a__c</columns>
    <columns>amc__I_want_to__c</columns>
    <columns>amc__So_that_I_can__c</columns>
    <columns>amc__Acceptance_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>